[project]
name = "flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "click>=8.3.0",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.43",
    "typing-extensions>=4.15.0",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "zipp>=3.23.0",
]

[dependency-groups]
dev = [
    "flask",
]

[tool.uv.sources]
flask = { workspace = true }
